fixed padding issue at bottom of page where footer overlapped class boxes again because was wrong last commit

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,15 +8,15 @@ body {
 
 main {
   flex: 1 0 auto;
-  padding-bottom: 2.5rem;
+
 }
 
 .footer {
-  position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
   z-index: 1000;
+  padding-top: 2.5rem;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
 }
 
